# ssd-scheduler

./: .gitignore  5 color matching.py  Aangepast goed algoritme.py  Complete algorithm.py  README.md  Surface code circuit simpele noise.py  X error circuit fault tolerant.py  X error stellated.py  X error surface code.py  Z error stellated.py  Z error surface code.py  algorithm.py  brute force creation of 6th color.py  compute_circuit_distance.py  compute_logical_error_probability.py  edges of graphs.py  layout.py  metrics.py  plot_layout.py  processing.py  pyproject.toml  requirements.txt  requirements_dev.txt  ssd_code.py  x fault tolerance stellated.py  z fault stellated dodecahedron.py  z fault tolerance stellated.py
css_scheduler/: __init__.py  algorithm.py
data/: ssd_CircuitNoiseModel_Matching_bX_r3_p1.00000e-02.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p1.00000e-03.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p1.00000e-04.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p1.00000e-05.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p2.00000e-03.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p2.00000e-04.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p2.00000e-05.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p5.00000e-03.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p5.00000e-04.txt  ssd_CircuitNoiseModel_Matching_bX_r3_p5.00000e-05.txt  ssd_CircuitNoiseModel_Matching_bZ_r3_p1.00000e-02.txt  ssd_CircuitNoiseModel_Matching_bZ_r3_p1.00000e-03.txt  ssd_CircuitNoiseModel_Matching_bZ_r3_p1.00000e-04.txt  ssd_CircuitNoiseModel_Matching_bZ_r3_p1.00000e-05.txt  (+6 more)
ssd_schedules/: depth6_id20_ft-True.pickle  (+1 more)
(+1069 files in other folders)
